# discord-rpc-client

./: .env.example  Cargo.toml  README.md
.github/workflows/: test_name_update.yml
src/: app_updater.rs  main.rs
test/: name_update.py
