[package]
name = "rust-discord-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rich-presence = "0.2.3"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
